# AOC-2021

./: .gitignore  CMakeLists.txt  README.md
src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  utils.cpp  utils.hpp
